[~] Fix submit button overlapping with input

--- a/app/javascript/styles/pages/_project.scss
+++ b/app/javascript/styles/pages/_project.scss
@@ -7,4 +7,7 @@
       }
     }
   }
+  &--with-margin {
+    margin-bottom: 3 * $global-space;
+  }
 }
